# c4harness

./: .gitignore  README.md  README_zh.md  claude-research.md  claude.md  methodology.md  pyproject.toml
c4harness/: __init__.py  analytics.py  paths.py  router.py  runtime.py  schemas.py  setup_user.py
c4harness/application/: __init__.py  prepare_task.py  run_graph.py
c4harness/backends/: external_cli.py
c4harness/bundled_skill/: SKILL.md  __init__.py
c4harness/cli/: __init__.py  main.py
c4harness/web/: app.js  (+2 more)
cost_router/: __init__.py  analytics.py  async_tasks.py  cli.py  config.py  dashboard.py  hooks.py  memory.py  paths.py  router.py  schemas.py  setup_user.py  usage.py  verifier.py
docs/: code-structure.md  decompose.md  delegator.md  history.md  implementation.md  memory.md  methodology.md  verifier.md
experiments/: README.md  qwen-explorer.toml
outputs/: LANDSCAPE.json  LANDSCAPE.md
skills/: README.md
tests/: test_architecture_boundaries.py  test_async_tasks.py  test_contract_verifier.py  test_core.py  test_dashboard.py  test_decomposition.py  test_decomposition_assignment.py  test_decomposition_cli.py  test_decomposition_compiler.py  test_decomposition_planning.py  test_decomposition_proposal.py  test_decomposition_situation.py  test_decomposition_verifier_templates.py  test_graph_execution.py  test_graph_patch_integration.py  test_history_runtime.py  test_integration_workspace.py  test_parallel_safety_regressions.py  test_root_verifier.py  test_run_graph.py  test_verifier_integration_phases.py  test_worker_config.py  test_worker_dashboard.py
(+128 files in other folders)
