[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cost-router"
version = "0.1.0"
description = "Cost-aware task router for coding agents"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cost-router = "cost_router.cli:main"

[tool.setuptools.packages.find]
include = ["cost_router*"]

[tool.setuptools.package-data]
"cost_router.web" = ["*.html", "*.css", "*.js"]
"cost_router.bundled_skill" = ["SKILL.md", "agents/*.yaml"]
