[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "c4harness"
version = "0.1.0"
description = "C4Harness – cost-aware multi-agent coding orchestration"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
c4harness = "c4harness.cli:main"

[tool.setuptools.packages.find]
include = ["c4harness*"]

[tool.setuptools.package-data]
"c4harness.web" = ["*.html", "*.css", "*.js"]
"c4harness.bundled_skill" = ["SKILL.md", "agents/*.yaml"]

[tool.setuptools.data-files]
"share/c4harness" = ["assets/c4.png"]
